WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239528
[WebGPU] WebKit and WebKitLegacy shouldn't need to know about WebGPU.framework
https://bugs.webkit.org/show_bug.cgi?id=239528
Summary
[WebGPU] WebKit and WebKitLegacy shouldn't need to know about WebGPU.framework
Myles C. Maxfield
Reported
2022-04-19 20:06:05 PDT
[WebGPU] WebKit and WebKitLegacy shouldn't need to know about WebGPU.framework
Attachments
Patch
(28.73 KB, patch)
2022-04-19 20:15 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(28.71 KB, patch)
2022-04-19 20:21 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2022-04-19 20:15:53 PDT
Created
attachment 457953
[details]
Patch
Myles C. Maxfield
Comment 2
2022-04-19 20:15:56 PDT
<
rdar://problem/91740931
>
Myles C. Maxfield
Comment 3
2022-04-19 20:21:41 PDT
Created
attachment 457955
[details]
Patch
Myles C. Maxfield
Comment 4
2022-04-20 10:43:48 PDT
Committed
r293106
(?): <
https://commits.webkit.org/r293106
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug